various bugfixes to match solidity v3.1 features
